--- a/practice/core-promises-star-wars/index.html
+++ b/practice/core-promises-star-wars/index.html
@@ -49,7 +49,7 @@
             <option>planets</option>
             <option>species</option>
           </select>
-          <input class="is-large input inputId" type="text" placeholder="Search...">
+          <input class="is-large input inputId" type="text" placeholder="Search ID...">
           <button id="byQueryBtnId" class="is-large button">Get by id</button>
         </div>
       </div>
